--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ quarkus.datasource.username:admin
 quarkus.datasource.password:QAZqaz244552
 quarkus.datasource.jdbc.url:jdbc:mysql://database-1.cxomou8k8s1k.us-east-1.rds.amazonaws.com:3306/userDB
 
-aws.accessKey:AKIAQ3EGSYQB2KR5H475
-aws.secretAccessKey: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
+aws.myAccessKey:AKIAQ3EGSYQB2KR5H475
+aws.mySecretAccessKey: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
 
 aws.region:us-east-1
 aws.topicArn:arn:aws:sns:us-east-1:058264306691:delete-user-topic
